Fix button icon alignment

--- a/source/sass/component/_button.scss
+++ b/source/sass/component/_button.scss
@@ -303,6 +303,7 @@ $c-button-border-width: var(--c-button-border-width, $border-width-button) !defa
     margin-left: $base;
     position: relative;
     z-index: $level-2;
+    display: flex;
 
     &--reverse {
         order: 1;
